<resources>
    <string name="em_user_remove">此用護已被移除</string>
    <string name="user_forbidden">用護被服務器限制連接</string>
    <string name="join_need_owner_approval">加入公開群需要群主同意</string>
    <string name="search_chat_record">搜索聊天信息</string>
    <string name="refuse">拒絕</string>
    <string name="accept_join_group">同意加入群：</string>
    <string name="refuse_join_group">拒絕加入群：</string>
    <string name="call_version_inconsistent">通話協議版本不壹致</string>
    <string name="messages_are_empty">聊天記錄已被清空</string>
    <string name="Add_group_members_success">添加群成員成功:</string>
    <string name="invite_join_group">邀請加入群：</string>
    <string name="Are_refuse_with">正在拒絕……</string>
    <string name="Refuse_with_failure">拒絕失敗:</string>
    <string name="delete_msg_when_exit_group">退群時刪除會話</string>
    <string name="auto_accept_group_invitation">自動同意群組加群邀請</string>
    <string name="network_unstable">網酪不穩定</string>
    <string name="no_call_data">沒有通話數據</string>
    <string name="settings_change_user">註銷帳護</string>
    <string name="settings_clear">清除緩存</string>
    <string name="settings_notice">消息設置</string>
    <string name="em_txt_new_group">新建群聊</string>
    <string name="em_txt_conversation_setting">會話設置</string>
    <string name="em_txt_create_group_failed">創建群聊失敗</string>
    <string name="em_txt_add_to_black">移出黑名單</string>
    <string name="em_txt_remove_from_black">添加黑名單</string>
    <string name="em_txt_remove_black_failed">移出黑名單失敗，請重試</string>
    <string name="em_title_select_contact">選擇聯繫人</string>
    <string name="em_txt_add_black_failed">添加黑名單失敗，請重試</string>
    <string name="em_txt_add_black_prompt">加入黑名單，你將不再收到對方的消息</string>
    <string name="em_txt_chat_record_delete_success">成功刪除聊天記錄</string>
    <string name="em_txt_chat_record_delete_failed">刪除聊天記錄失敗</string>
    <string name="em_setting_chat">聊天設置</string>
    <string name="input_msg_key">輸入內容關鍵字…</string>
    <string name="em_hint_change_owner">更換群主將導致你失去管理權限，是否更換群主為</string>
    <string name="em_group_dissolve">該群已被群主解散</string>
    <string name="em_remove_group">你已被群主移出該群組</string>
    <string name="settings_chat">聊天設置</string>
    <string name="remove_group_user">移除群員</string>
    <string name="change_owner">更換群主</string>
    <string name="collaboration">協同</string>
    <string name="flow">流程</string>
    <string name="workplan">計劃</string>
    <string name="email">郵件</string>
    <string name="schedule">日程</string>
    <string name="load_conversation_list_error">會話加載失敗</string>
    <string name="group_user">群組成員</string>
    <string name="im_black_list">黑名單列表</string>
    <string name="has_delete">刪除%d人</string>
    <string name="Initializing_im">正在初始化聊天模塊，請稍後再試</string>
    <string name="em_sendfile_maxsize">暫不支持發送文件大小大於10M的文件</string>
    <string name="load_user_fail">獲取群組人員數據失敗</string>
    <string name="del_user_fail">移除群員失敗，請稍後重試</string>
    <string name="unblock_user">是否移出黑名單</string>
    <string name="member_count">群组人数</string>
    <string name="mute_notification">消息免打扰</string>
    <string name="black_tip">已添加至黑名單，你將不再收到對方的消息</string>
    <string name="em_txt_conversation_setTop">置頂聊天</string>
    <string name="voiceCall_out_permission">缺少錄音權限,語音通話無法正常使用。</string>
    <string name="videoCall_out_camera_permission">缺少相機權限,視頻通話無法正常使用。</string>
    <string name="videoCall_out_voice_permission">缺少錄音權限,語音通話無法正常使用。</string>
    <string name="videoCall_out_camera_voice_permission">缺少相機及錄音權限,語音通話無法正常使用。</string>
    <string name="schedule_remind_success">設置提醒成功</string>
    <string name="schedule_remind_error">設置提醒失败</string>
    <string name="schedule_remind_time_hint">提醒時間必須在當前時間5分鐘後</string>
    <string name="turn_on_speaker">使用揚聲器播放語音</string>
    <string name="turn_off_speaker">使用聽筒播放語音</string>
    <string name="setting_fail">設置失敗</string>
    <string name="reader_new_goup">聊天記錄導入新群</string>
    <string name="write_local">導出聊天記錄</string>
    <string name="get_chat_group_error">獲取群聊異常</string>
    <string name="write_history_data_success">記錄導出成功</string>
    <string name="write_history_data_error">記錄導出失敗</string>
    <string name="write_new_group_error">聊天群的創建時間，必須晚于群聊解散時間</string>
    <string name="write_local_hint">數據導出到:下載管理中</string>
    <string name="write_local_determine">導出</string>
    <string name="text_ack_msg">已讀</string>
    <string name="text_delivered_msg">送達</string>
    <string name="back">返回</string>
    <string name="button_pushtotalk">按住說話</string>
    <string name="button_send">發送</string>
    <string name="attach_picture">圖片</string>
    <string name="attach_take_pic">拍照</string>
    <string name="attach_location">位置</string>
    <string name="attach_video">視頻</string>
    <string name="attach_file">文件</string>
    <string name="attach_voice_call">語音電話</string>
    <string name="attach_video_call">視頻通話</string>
    <string name="move_up_to_cancel">手指上滑，取消發送</string>
    <string name="release_to_cancel">松開手指，取消發送</string>
    <string name="send_fail">發送消息失敗,</string>
    <string name="delete_conversation_messages">刪除會話和消息</string>
    <string name="delete_conversation">刪除會話</string>
    <string name="delete">刪除</string>
    <string name="resend">重發</string>
    <string name="confirm_resend">確認重發該信息？</string>
    <string name="connect_failuer_toast">請檢查網絡或稍候重試</string>
    <string name="network_unavailable">網絡連接不可用，請檢查網絡</string>
    <string name="copy">復制</string>
    <string name="forward">轉發</string>
    <string name="ok">確定</string>
    <string name="cancel">取消</string>
    <string name="prompt">提示</string>
    <string name="location_recv">[位置]</string>
    <string name="location_message">位置信息</string>
    <string name="recording_video">錄制視頻</string>
    <string name="location_prefix">[我的位置]</string>
    <string name="picture">[圖片]</string>
    <string name="video">[視頻]</string>
    <string name="file">[文件]</string>
    <string name="voice_prefix">[語音]</string>
    <string name="voice_call">[語音通話]</string>
    <string name="video_call">[視頻通話]</string>
    <string name="dynamic_expression">[動態表情]</string>
    <string name="button_save">保存</string>
    <string name="search_header">搜</string>
    <string name="recoding_fail">錄音失敗，請重試！</string>
    <string name="exit_group_hint">退出後，將不再接收此群聊信息</string>
    <string name="dissolution_group_hint">退出後，此群將被解散</string>
    <string name="connect_conflict">同壹帳號已在其他設備登錄</string>
    <string name="book_black">通訊錄黑名單</string>
    <string name="session">會話</string>
    <string name="Application_and_notify">申請與通知</string>
    <string name="save_new_nickname">保存</string>
    <string name="nickname_description">設置此昵稱以後，在與iOS客戶端demo聊天過程中，iOS壹側會顯示此昵稱而不是環信ID，如果對方使用安卓客戶端則此設置不生效</string>
    <string name="group_chat">群聊</string>
    <string name="search">搜索</string>
    <string name="push_nick">iOS離線推送昵稱</string>
    <string name="The_new_group_chat">新建群組</string>
    <string name="group_name">群聊名稱</string>
    <string name="Group_chat_profile">群聊簡介</string>
    <string name="Whether_the_public">是否公開</string>
    <string name="Open_group_members_invited">開放群成員邀請</string>
    <string name="blacklist">黑名單列表</string>
    <string name="Empty_the_chat_record">清空聊天記錄</string>
    <string name="Shielding_of_the_message">屏蔽群消息</string>
    <string name="dismiss_group">解散群聊</string>
    <string name="downwaiting">正在下載文件請稍後</string>
    <string name="mute">靜音</string>
    <string name="Hands_free">免提</string>
    <string name="hang_up">掛斷</string>
    <string name="answer">接聽</string>
    <string name="agree">同意</string>
    <string name="not_download">未下載:</string>
    <string name="is_down_please_wait">正在下載視頻請稍候</string>
    <string name="Exit_the_group_chat">退出群聊</string>
    <string name="all_members">所有成員</string>
    <string name="Removed_from_the_failure">移出失敗</string>
    <string name="call_duration">通話時長</string>
    <string name="Refused">已拒絕</string>
    <string name="The_other_party_has_refused_to">對方已拒絕</string>
    <string name="The_other_is_not_online">對方不在線</string>
    <string name="The_other_is_on_the_phone">對方正在通話中</string>
    <string name="The_other_party_did_not_answer">對方未接聽</string>
    <string name="did_not_answer">未接聽</string>
    <string name="Has_been_cancelled">已取消</string>
    <string name="unable_to_get_loaction">無法獲取到您的位置信息!</string>
    <string name="not_connect_to_server">尚未連接至服務器，請稍後重試</string>
    <string name="cant_find_pictures">找不到圖片</string>
    <string name="Whether_to_empty_all_chats">是否清空所有聊天記錄</string>
    <string name="Send_voice_need_sdcard_support">發送語音需要sdcard支持</string>
    <string name="Recording_without_permission">無錄音權限</string>
    <string name="The_recording_time_is_too_short">錄音時間太短</string>
    <string name="send_failure_please">發送失敗，請檢測服務器是否連接</string>
    <string name="Cant_chat_with_yourself">不能和自己聊天</string>
    <string name="get_failed_please_check">獲取失敗,請檢查網絡或稍後再試</string>
    <string name="Modify_the_group_name_successful">修改群名稱成功</string>
    <string name="change_the_group_name_failed_please">改變群名稱失敗，請檢查網絡或稍後重試</string>
    <string name="change_the_owner_failed_please">改變群主失敗，請檢查網絡或稍後重試</string>
    <string name="change_the_change_owner_success">改變群主成功</string>
    <string name="Exit_the_group_chat_failure">退出群聊失敗:</string>
    <string name="Dissolve_group_chat_tofail">解散群聊失敗:</string>
    <string name="Add_group_members_fail">添加群成員失敗:</string>
    <string name="remove_group_of">解除群屏蔽失敗，請檢查網絡或稍後重試</string>
    <string name="group_of_shielding">群屏蔽失敗，請檢查網絡或稍後重試</string>
    <string name="sure_to_empty_this">確定清空此群的聊天記錄嗎？</string>
    <string name="can_not_connect_chat_server_connection">連接不到聊天服務器</string>
    <string name="Invite_you_to_join_a_group_chat">邀請你加入了群聊</string>
    <string name="Group_name_cannot_be_empty">群組名稱不能為空</string>
    <string name="Is_to_create_a_group_chat">正在創建群聊……</string>
    <string name="Failed_to_create_groups">創建群組失敗:</string>
    <string name="The_video_to_start">錄像開始</string>
    <string name="Whether_to_send">是否發送？</string>
    <string name="Open_the_equipment_failure">打開設備失敗!</string>
    <string name="Download_the_pictures">下載圖片: 0%</string>
    <string name="Download_the_pictures_new">下載圖片:</string>
    <string name="Failed_to_download_file">下載文件失敗:</string>
    <string name="Are_connected_to_each_other">正在連接對方……</string>
    <string name="Is_not_yet_connected_to_the_server">尚未連接至服務器</string>
    <string name="have_connected_with">已經和對方建立連接，等待對方接受……</string>
    <string name="In_the_call">通話中……</string>
    <string name="The_other_party_refused_to_accept">對方拒絕接受！……</string>
    <string name="Connection_failure">連接建立失敗！……</string>
    <string name="The_other_party_is_not_online">對方不在線，請稍後再撥……</string>
    <string name="The_other_is_on_the_phone_please">對方正在通話中，請稍後再撥</string>
    <string name="The_other_is_hang_up">對方已經掛斷</string>
    <string name="The_other_party_did_not_answer_new">對方未接聽</string>
    <string name="Have_downloaded">已下載</string>
    <string name="Did_not_download">未下載</string>
    <string name="Has_agreed_to_your_friend_request">已同意你的好友請求</string>
    <string name="Request_to_add_you_as_a_friend">請求加你為好友</string>
    <string name="Apply_to_the_group_of">申請加入群：</string>
    <string name="Has_agreed_to">已同意</string>
    <string name="Has_refused_to">已拒絕</string>
    <string name="Are_agree_with">正在同意……</string>
    <string name="Agree_with_failure">同意失敗:</string>
    <string name="Is_download_voice_click_later">正在下載語音，稍後點擊</string>
    <string name="search_new">搜</string>
    <string name="were_mentioned">[有人@我]</string>
    <string name="Change_the_group_name">改變群名稱</string>
    <string name="no_more_messages">沒有更多的消息了</string>
    <string name="gorup_not_found">找不到這個群組</string>
    <string name="move_out_backlist">移出黑名單</string>
    <string name="input_new_nick_hint">輸入新昵稱</string>
    <string name="error_send_invalid_content">你發送了不合法的消息內容</string>
    <string name="recall">撤回</string>
    <string name="group_destroy_msg">該群已被解散</string>
    <string name="reply">回復</string>
    <string name="remind">提醒</string>
</resources>