<?xml version="1.0" encoding="utf-8"?>
<cn.flyrise.feep.core.base.views.SwipeBackLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@id/swipeBackLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/core_view_transparent"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <cn.flyrise.feep.core.base.views.FEToolbar
            android:id="@id/toolBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/status_bar_height"
            android:background="?attr/colorPrimary"
            android:minHeight="@dimen/action_bar_size"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#f2f0eb">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#fafafa"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/mdp_76"
                    android:background="#f5f5f5"
                    android:gravity="center"
                    android:text="@string/group_destroy_msg"
                    android:textColor="@color/holo_red_light"
                    android:textSize="@dimen/msp_26"/>

                <View style="@style/detail_line"/>

                <RelativeLayout
                    android:id="@+id/rl_search"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/mdp_48"
                    android:paddingLeft="@dimen/mdp_16"
                    android:background="?android:attr/selectableItemBackground">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:text="@string/search_chat_record"
                        android:textColor="@color/text_dark_color"
                        android:textSize="@dimen/text_middle_size"/>

                    <View
                        style="@style/detail_line"
                        android:layout_alignParentBottom="true"/>
                </RelativeLayout>


                <RelativeLayout
                    android:id="@+id/all_history_write_local"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/mdp_48"
                    android:paddingLeft="@dimen/mdp_16"
                    android:background="?android:attr/selectableItemBackground">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:text="@string/write_local"
                        android:textColor="@color/text_dark_color"
                        android:textSize="@dimen/text_middle_size"/>

                    <View
                        style="@style/detail_line"
                        android:layout_alignParentBottom="true"/>
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/all_history_reader_new_goup"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/mdp_48"
                    android:paddingLeft="@dimen/mdp_16"
                    android:background="?android:attr/selectableItemBackground">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:text="@string/reader_new_goup"
                        android:textColor="@color/text_dark_color"
                        android:textSize="@dimen/text_middle_size"/>

                    <View
                        style="@style/detail_line"
                        android:layout_alignParentBottom="true"/>
                </RelativeLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</cn.flyrise.feep.core.base.views.SwipeBackLayout>